# foundry-llm

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: nanollama_8l.json  nanollama_v2_127m.json  swiftllama_350m.json
configs/ablation/: A1_current_baseline.yaml  A2_muon_with_wd.yaml  A3_adamw.yaml  B1_muon_lr005.yaml  B2_muon_lr01.yaml  C1_base_muon.yaml  C2_base_adamw.yaml  D1_mha_relu2_muon.yaml  D2_mha_relu2_muon_wd.yaml  N1_muon_nanochat.yaml  N2_adamw.yaml  N3_base_arch_muon.yaml
data/: prepare_dataset.py
docs/: ablation_analysis.md  architecture_decisions.md  eval_results.md  model_architecture.md  muon_decision_rationale.md  qualitative_eval.md  replication.md  retrospective.md  serving.md  serving_nanollama_tiktoken.md  serving_project_deliverables.md  serving_results.md  training_dynamics.md  training_results.md
experiments/: nanollama_serving_provenance.md  serving_model_provenance.md
llm_lab/: __init__.py
results/: ablation_summary.csv  nanollama_8l_training.csv
scripts/: download_fineweb_parallel.py  interact.py  p15_train_tokenizer_streaming_98.py  p1_bench_attention.py  p1_bench_step.py  p1_collect_phase4_numbers.py  p1_sample_char.py  p1_train_char_sanity_check.py  p2_sample_bpe.py  p2_train_bpe.py  p3_train_posenc.py  pretrain_nanollama.py  run_ablation_probes.py  run_nanollama_v2_probes.py  setup_pod.sh  tinyllama_p15_prepare_finewebedu.py  tinyllama_p15_prepare_tinystories.py  tinyllama_p15_pretokenize_shards.py  tinyllama_p15_train_tokenizer.py  train_nanollama_v2.py  train_swiftllama_350m.py
(+161 files in other folders)
